# Least-Squares-Odometry-Calibration

./: CMakeLists.txt  LICENSE  README.md
include/: least_squares.h  read_files.h  tools.h
resources/: odom_motions.txt  scanmatched_motions.txt
src/: least_squares.cpp  main.cpp  read_files.cpp
